--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,3 +56,7 @@
 <p class="text-amber-300 text-amber-700">Test2</p>
 
 <router-outlet/>
+
+<div class="p-6 bg-blue-100 text-blue-900 rounded shadow">
+  Tailwind is working 🎉
+</div>
