--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "primeicons/primeicons.css";
+
 /* You can add global styles to this file, and also import other style files
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
@@ -19,3 +21,13 @@ body {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer tailwind-base, primeng, tailwind-utilities;
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
